--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 log = { version = "0.4.18", features = ["serde"] }
 simple-log = "1.6.0"
 apps = { path = "./apps" }
+libc = "0.2.150"
+epoll = "4.3.3"
