--- a/apps/cfe/Cargo.toml
+++ b/apps/cfe/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "apps"
+name = "cfe"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.3.3"
-lazy_static = "1.4.0"
-log = { version = "0.4.18", features = ["serde"] }
+epoll = "4.3.3"
+log = { version = "0.4.20", features = ["serde"] }
 parking_lot = { version = "0.12.1", features = ["serde"] }
 ringbuf = "0.3.3"
 serde = { version = "1.0.163", features = ["derive"] }
+
