--- a/apps/ground/Cargo.toml
+++ b/apps/ground/Cargo.toml
@@ -1,17 +1,9 @@
 [package]
-name = "sch"
+name = "ground"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[[bin]]
-name = "flight"
-path = "src/sch_flight.rs"
-
-[[bin]]
-name = "payload"
-path = "src/sch_payload.rs"
 
 [dependencies]
 bincode = "1.3.3"
@@ -22,4 +14,5 @@ ringbuf = "0.3.3"
 serde = { version = "1.0.163", features = ["derive"] }
 cfe = { path = "../cfe"}
 simple-log = "1.6.0"
-libc = "0.2.150"
+rerun = "0.11.0"
+serde_json = "1.0.96"
