--- a/apps/example/Cargo.toml
+++ b/apps/example/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "payload"
+path = "src/example_payload.rs"
+
+[lib]
+name = "example"
+path = "src/example.rs"
+
 [dependencies]
-cfe = { path = "../cfe"}
+cfe = { path = "../../libs/cfe"}
