--- a/apps/ground/Cargo.toml
+++ b/apps/ground/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.163", features = ["derive"] }
-cfe = { path = "../cfe"}
+cfe = { path = "../../libs/cfe"}
 rerun = "0.11.0"
 serde_json = "1.0.96"
