--- a/libs/cfe/Cargo.toml
+++ b/libs/cfe/Cargo.toml
@@ -9,9 +9,6 @@ edition = "2021"
 bincode = "1.3.3"
 chrono = "0.4.31"
 colored = "2.0.4"
-epoll = "4.3.3"
 log = { version = "0.4.20", features = ["serde"] }
-parking_lot = { version = "0.12.1", features = ["serde"] }
-ringbuf = "0.3.3"
+queues = "1.1.0"
 serde = { version = "1.0.163", features = ["derive"] }
-simple-log = "1.6.0"
