--- a/builds/fl/Cargo.toml
+++ b/builds/fl/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "ground"
+name = "fl"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.163", features = ["derive"] }
 cfe = { path = "../../libs/cfe"}
-serde_json = "1.0.96"
+relay = { path = "../../apps/relay"}
+sch = { path = "../../apps/sch"}
+example = { path = "../../apps/example"}
 simple-log = "1.6.0"
-log = "0.4.20"
-reqwest = { version = "0.11.23", features = ["blocking", "json"] }
-chrono = "0.4.31"
